--- a/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+++ b/.settings/org.eclipse.cdt.managedbuilder.core.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 environment/buildEnvironmentInclude/fr.ac6.managedbuild.config.gnu.cross.exe.debug.855901797/CPATH/delimiter=;
 environment/buildEnvironmentInclude/fr.ac6.managedbuild.config.gnu.cross.exe.debug.855901797/CPATH/operation=remove
+environment/buildEnvironmentInclude/fr.ac6.managedbuild.config.gnu.cross.exe.debug.855901797/CPLUS_INCLUDE_PATH/delimiter=;
+environment/buildEnvironmentInclude/fr.ac6.managedbuild.config.gnu.cross.exe.debug.855901797/CPLUS_INCLUDE_PATH/operation=remove
 environment/buildEnvironmentInclude/fr.ac6.managedbuild.config.gnu.cross.exe.debug.855901797/C_INCLUDE_PATH/delimiter=;
 environment/buildEnvironmentInclude/fr.ac6.managedbuild.config.gnu.cross.exe.debug.855901797/C_INCLUDE_PATH/operation=remove
 environment/buildEnvironmentInclude/fr.ac6.managedbuild.config.gnu.cross.exe.debug.855901797/append=true
